--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
   </head>
   <body>
     <header>
+      <div class="container" >
       <%= render 'layouts/navigation' %>
+      </div>
     </header>
     <main role="main">
        <%= render 'layouts/messages' %>
