--- a/app/views/posts/embed.html.erb
+++ b/app/views/posts/embed.html.erb
@@ -1,79 +1,22 @@
-<!-- Button trigger modal -->
 
+<!--  <audio controls
+          data-info-album-art="<%= @post.image.url() %>"
+          data-info-author="<%= @post.user.name %>"
+          data-info-title="<%= @post.title %>"
+          data-info-att="Elon"
+          data-info-att-link="<%= root_url %>">
+          <source src=" <%= @post.audio %>" type="audio/wav">
+          <source src=" <%= @post.audio %>" type="audio/mp3">
+          An html5-capable browser is required to play this audio. 
+        </audio>
+ -->
 
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Embed: <%= @post.title %></h4>
-      </div>
-      <div class="modal-body">
-        <iframe src="http://localhost:8000/posts/3/embed" frameborder="none" width="500" height="200"></iframe>
-        <br>
-        <textarea cols="60" rows="3"><iframe src="http://localhost:8000/posts/3/embed" frameborder="none" width="500" height="200"></iframe></textarea>
-
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Copy to Clipboard</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-8">
-
-  <h1>
-
-    <%= link_to @post.title, @post.url, :target => "_blank" %>
-    <br/>
-  <small>
-  by  <%= @post.user.name %>
-  </small>
-  </h1>
-
-
-  <audio controls="controls">
+   <audio controls data-info-att="<h3><%= @post.title %></h3>"
+          data-info-att-link="<%= post_url(@post) %>">>
     Your browser does not support the <code>audio</code> element.
-    <source src=" <%= @post.audio %>" type="audio/wav">
+    <source src=" <%= @post.audio.url() %>" type="audio/wav">
   </audio>
 
-<button type="button" class="btn btn-primary btn-md" data-toggle="modal" data-target="#myModal">
-  <i class="glyphicon glyphicon-menu-left"></i>/<i class="glyphicon glyphicon-menu-right"></i> Embed
-</button>
-  <% unless @post.summary.blank? %>
-  <p class="well">
-    <%= @post.summary %>
-  </p>
-  <% end %>
-
-  <p class="well hidden">
-    <%= @post.body %>
-  </p>
-
-  </div>
-  <div class="col-md-4">
-    <br/>
-    <%= image_tag(@post.image.url(:standard)) %>
-
-  </div>
-
-</div>
-
-
-<p>
-  <%= @post.plays %>
-</p>
-
-<% if user_signed_in? %>
-  <% if current_user.try(:admin?) %>
-		<%= link_to 'Edit', edit_post_path(@post) %> 
-	<% end %>
-<% end %>
 
 
 
