--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -42,18 +42,21 @@
     <source src=" <%= @post.audio %>" type="audio/wav">
   </audio>
 
-<button type="button" class="btn btn-primary btn-md" data-toggle="modal" data-target="#myModal">
-  <i class="glyphicon glyphicon-menu-left"></i>/<i class="glyphicon glyphicon-menu-right"></i> Embed
-</button>
+
   <% unless @post.summary.blank? %>
   <p class="well">
     <%= @post.summary %>
   </p>
   <% end %>
 
+  <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
+  <i class="glyphicon glyphicon-menu-left"></i>/<i class="glyphicon glyphicon-menu-right"></i> Embed
+</button>
+
   <p class="well hidden">
     <%= @post.body %>
   </p>
+
 
   </div>
   <div class="col-md-4">
