--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,8 +1,14 @@
 <%# add navigation links to this file %>
 <li><%= link_to 'Upload', new_post_path %></li>
 <% if user_signed_in? %>
+	<li class="dropdown pull-right">
+	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Settings <span class="caret"></span></a>
+	 <ul class="dropdown-menu">
+	 <li><%= link_to 'Profile', profile_path(current_user.profile) %></li>
+	 <li><%= link_to 'Edit Profile', edit_profile_path(current_user.profile) %></li>
   <li><%= link_to 'Edit account', edit_user_registration_path %></li>
   <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
+  </ul></li>
   
 <% else %>
   <li><%= link_to 'Sign in', new_user_session_path %></li>
@@ -10,7 +16,12 @@
 <% end %>
 <% if user_signed_in? %>
   <% if current_user.try(:admin?) %>
-    <li><%= link_to 'Admin', '/admin' %></li>
+  	<li class="dropdown pull-right">
+	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
+	 <ul class="dropdown-menu">
+    <li><%= link_to 'Upmin', '/admin' %></li>
     <li><%= link_to 'Users', users_path %></li>
+
+    </ul></li>
   <% end %>
 <% end %>
