--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -432,11 +432,15 @@
     <%= link_to @post.title, @post.url, :target => "_blank" %>
     <br/>
   <small>
-  by  <%= @post.user.name %>
+  by  <%= link_to @post.user.profile.display_name, profile_path(@post.user.profile) %>
   </small>
   </h1>
 
-
+  <% @post.tag_list.each do |tag| %>
+      <label class="label label-default"> <i class="glyphicon glyphicon-tag"></i> 
+      <%= tag %></label>
+  <% end %>
+  <br/><br/>
   <audio controls="controls">
     Your browser does not support the <code>audio</code> element.
     <source src=" <%= @post.audio %>" type="audio/wav">
@@ -449,9 +453,16 @@
   </p>
   <% end %>
 
-  <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
+  <a type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
   <i class="glyphicon glyphicon-menu-left"></i>/<i class="glyphicon glyphicon-menu-right"></i> Embed
-</button>
+</a>
+
+<% if user_signed_in? %>
+  <% if current_user.try(:admin?) %>
+    <%= link_to 'Edit', edit_post_path(@post), :class => "btn btn-default btn-sm" %> 
+  <% end %>
+<% end %>
+
 
   <p class="well hidden">
     <%= @post.body %>
@@ -472,9 +483,4 @@
   <%= @post.plays %>
 </p>
 
-<% if user_signed_in? %>
-  <% if current_user.try(:admin?) %>
-		<%= link_to 'Edit', edit_post_path(@post) %> 
-	<% end %>
-<% end %>
 
