--- a/app/views/posts/embed.html.erb
+++ b/app/views/posts/embed.html.erb
@@ -18,6 +18,12 @@
   </audio>
 
 
+<style type="text/css">
+    button.col-sm-1 {
+        height: 40px !important;
+    }
+</style>
+
 
 
 <script type="text/javascript">
