--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -8,7 +8,7 @@
     <%= f.file_field :image %>
     <br/>
     <%= f.input :website %>
-    <%= f.input :user_id %>
+    <%= f.input :user_id, as: :hidden %>
   </div>
 
   <div class="form-actions">
