--- a/app/views/layouts/readable.html.erb
+++ b/app/views/layouts/readable.html.erb
@@ -21,6 +21,7 @@
   <body>
   <%= javascript_include_tag "readable" %>
     <%= yield(:page_javascript) if content_for?(:page_javascript) %>
+    <%= cloudinary_js_config %>
 
 
     <header style="margin-bottom:60px;">
