--- a/app/views/posts/embed.html.erb
+++ b/app/views/posts/embed.html.erb
@@ -11,8 +11,9 @@
         </audio>
  -->
 
-   <audio controls data-info-att="<h3><%= @post.title %></h3>"
-          data-info-att-link="<%= post_url(@post) %>">>
+ <%= image_tag(@post.image.url(:embed),  :class => "pull-right ") %>
+
+   <audio controls="controls" >
     Your browser does not support the <code>audio</code> element.
     <source src=" <%= @post.audio.url() %>" type="audio/wav">
   </audio>
