--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -443,13 +443,16 @@
   <br/><br/>
   <audio controls="controls">
     Your browser does not support the <code>audio</code> element.
-    <source src=" <%= @post.audio %>" type="audio/wav">
+    <source src="   <%= @post.audio.url() %>  " type="audio/wav">
   </audio>
 
+    <%= @post.audio.url() %>  
 
   <% unless @post.summary.blank? %>
   <p class="well">
     <%= @post.summary %>
+
+
   </p>
   <% end %>
 
