--- a/app/views/posts/embed.html.erb
+++ b/app/views/posts/embed.html.erb
@@ -15,7 +15,7 @@
 
    <audio controls="controls" >
     Your browser does not support the <code>audio</code> element.
-    <source src=" <%= @post.audio.url() %>" type="audio/wav">
+    <source src="<%= "http://res.cloudinary.com/dnffmpcmo/video/upload/#{@post.audio.file.identifier}" %>  " type="audio/wav">
   </audio>
 
 
