--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,27 +1,48 @@
-<h1>
+<h1 class="text-center">
     Elon
 </h1>
 <hr/>
+
+<div class="col-md-12">
+<div class="col-md-8">
     <% @posts.each do |post| %>
         <%= link_to image_tag(post.image.url(:thumbnail), :class => "pull-left thumbnail"), post %>
 
-        <h2> &nbsp;<%= link_to post.title, post %>
+        <h3> &nbsp;<%= link_to post.title, post %>
         <br/>
         <small>&nbsp; by <%= link_to post.user.profile.display_name, profile_path(post.user.profile) %></small>
-        </h2>
-
-
+        </h3>
+        &nbsp;
+        <% post.tag_list.each do |tag| %>
+      <label class="label label-default"> <i class="glyphicon glyphicon-tag"></i> 
+      <%= link_to tag, tag_path(tag) %></label>
+  <% end %>
         <% if user_signed_in? %>
             <% if current_user.try(:admin?) %>
-            &nbsp; <span>
-                <%= link_to 'Edit', edit_post_path(post) %>
+            <span class="pull-right">
+               &nbsp; <%= link_to 'Edit', edit_post_path(post), :class => "btn btn-xs btn-default" %>
             </span>
-            <span> | <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <span class="pull-right"> <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' },  :class => "btn btn-xs btn-danger" %>
             </span>
             <% end %>
         <% end %>
-      <br>
+      <hr>
     <% end %>
+</div>
+<div class="col-md-4">
+    <div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Sponsored by</h3>
+  </div>
+  <div class="panel-body">
+    <%= image_tag("https://placekitten.com/g/300/250") %>
+  </div>
+</div>
 
+
+
+</div>
+
+</div>
 
 
