--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -410,9 +410,9 @@
         <h4 class="modal-title" id="myModalLabel">Embed: <%= @post.title %></h4>
       </div>
       <div class="modal-body">
-        <iframe src="http://localhost:8000/posts/3/embed" frameborder="none" width="500" height="200"></iframe>
+        <iframe src="http://localhost:8000/posts/<%= @post.id %>/embed" frameborder="none" width="500" height="200"></iframe>
         <br>
-        <textarea cols="60" rows="3"><iframe src="http://localhost:8000/posts/3/embed" frameborder="none" width="500" height="200"></iframe></textarea>
+        <textarea cols="60" rows="3"><iframe src="http://localhost:8000/posts/<%= @post.id %>/embed" frameborder="none" width="500" height="200"></iframe></textarea>
 
 
       </div>
@@ -438,7 +438,7 @@
 
   <% @post.tag_list.each do |tag| %>
       <label class="label label-default"> <i class="glyphicon glyphicon-tag"></i> 
-      <%= tag %></label>
+      <%= link_to tag, tag_path(tag) %></label>
   <% end %>
   <br/><br/>
   <audio controls="controls">
@@ -472,9 +472,19 @@
 
 
   </div>
-  <div class="col-md-4">
+  <div class="col-md-4 text-center">
     <br/>
     <%= image_tag(@post.image.url(:standard)) %>
+    <br/>
+<br/>
+        <div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Sponsored by</h3>
+  </div>
+  <div class="panel-body">
+    <%= image_tag("https://placekitten.com/g/300/250") %>
+  </div>
+</div>
 
   </div>
 
