--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -36,14 +36,19 @@
         <br/>
 
         </h2>
-
+             &nbsp;
+        <% post.tag_list.each do |tag| %>
+      <label class="label label-default"> <i class="glyphicon glyphicon-tag"></i> 
+      <%= link_to tag, tag_path(tag) %></label>
+  <% end %>
+  <br/>
 
         <% if user_signed_in? %>
             <% if current_user.try(:admin?) %>
-            &nbsp; <span>
-                <%= link_to 'Edit', edit_post_path(post) %>
+            &nbsp; <span class="pull-right">
+                 &nbsp; <%= link_to 'Edit', edit_post_path(post) %>
             </span>
-            <span> | <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <span class="pull-right"><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
             </span>
             <% end %>
         <% end %>
