--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -410,9 +410,9 @@
         <h4 class="modal-title" id="myModalLabel">Embed: <%= @post.title %></h4>
       </div>
       <div class="modal-body">
-        <iframe src="http://localhost:8000/posts/<%= @post.id %>/embed" frameborder="none" width="500" height="200"></iframe>
+        <iframe src="<%= embed_url(@post) %>" frameborder="none" width="500" height="200"></iframe>
         <br>
-        <textarea cols="60" rows="3"><iframe src="http://localhost:8000/posts/<%= @post.id %>/embed" frameborder="none" width="500" height="200"></iframe></textarea>
+        <textarea cols="60" rows="3"><iframe src="<%= embed_url(@post) %>" frameborder="none" width="500" height="200"></iframe></textarea>
 
 
       </div>
