--- a/app/views/posts/embed.html.erb
+++ b/app/views/posts/embed.html.erb
@@ -1,6 +1,6 @@
 
 <script type="text/javascript">
-  $(document).ready(function(){
+  $(function(){
     (function ($) {'use strict';
     $('audio[controls]').before(function () {
 
