--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -443,7 +443,7 @@
   <br/><br/>
   <audio controls="controls">
     Your browser does not support the <code>audio</code> element.
-    <source src="   <%= "http://res.cloudinary.com/dnffmpcmo/video/upload/#{@post.audio.file.identifier}" %>  " type="audio/wav">
+    <source src="   <%= "http://res.cloudinary.com/dnffmpcmo/video/upload/#{@post.audio.file.identifier}" %>  " type="audio/mp3">
   </audio>
 
 
