--- a/app/views/layouts/readable.html.erb
+++ b/app/views/layouts/readable.html.erb
@@ -12,16 +12,19 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
 
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+
     <%= stylesheet_link_tag "readable", :media => "all" %>
 
     <%= yield(:page_stylesheet) if content_for?(:page_stylesheet) %>
+    <%= javascript_include_tag "readable" %>
+    <%= yield(:page_javascript) if content_for?(:page_javascript) %>
+    <%= cloudinary_js_config %>
 
 
   </head>
   <body>
-  <%= javascript_include_tag "readable" %>
-    <%= yield(:page_javascript) if content_for?(:page_javascript) %>
-    <%= cloudinary_js_config %>
+  
 
 
     <header style="margin-bottom:60px;">
