--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,6 +18,15 @@
         <small>&nbsp; by <%= link_to post.user.profile.display_name, profile_path(post.user.profile) %></small>
         </h3>
         &nbsp;
+
+        <label class="label label-success">
+
+     <i class="glyphicon glyphicon-play"></i> 
+
+     <%= pluralize(post.plays.to_i, 'play') %>
+
+     </label>
+      &nbsp;
         <% post.tag_list.each do |tag| %>
       <label class="label label-default"> <i class="glyphicon glyphicon-tag"></i> 
       <%= link_to tag, tag_path(tag) %></label>
