--- a/app/views/layouts/embed.html.erb
+++ b/app/views/layouts/embed.html.erb
@@ -5,7 +5,7 @@
     <title><%= content_for?(:title) ? yield(:title) : "Elon" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Elon" %>">
     <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
+    <%= javascript_include_tag 'readable' %>
     <%= csrf_meta_tags %>
   </head>
   <body>
