--- a/app/views/layouts/readable.html.erb
+++ b/app/views/layouts/readable.html.erb
@@ -12,7 +12,7 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+     <!--<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script> -->
 
     <%= stylesheet_link_tag "readable", :media => "all" %>
 
@@ -26,7 +26,7 @@
     
       <%= javascript_include_tag "readable" %>
     
-    <%= cloudinary_js_config %>
+    <%#= cloudinary_js_config %>
 
     <header style="margin-bottom:60px;">
       <div class="container" >
