--- a/app/views/layouts/embed.html.erb
+++ b/app/views/layouts/embed.html.erb
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Elon" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Elon" %>">
-    <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
+    <%= stylesheet_link_tag 'readable', media: 'all' %>
+    <%= javascript_include_tag 'readable' %>
     <%= csrf_meta_tags %>
   </head>
   <body>
