--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -22,6 +22,7 @@
 	 <ul class="dropdown-menu">
     <li><%= link_to 'Upmin', '/admin' %></li>
     <li><%= link_to 'Users', users_path %></li>
+    <li><%= link_to 'Posts', posts_admin_path %></li>
 
     </ul></li>
   <% end %>
