--- a/app/views/posts/admin.html.erb
+++ b/app/views/posts/admin.html.erb
@@ -1,12 +1,17 @@
-<h1>Posts to be recorded</h1>
+<h1>Posts to be recorded:</h1>
 
 <hr/>
 
 <% @posts.each do |post| %>
-	<h2><%= link_to post.title || "No Title", post %></h2>
-	<span class="pull-right">
+	<h3><%= link_to post.title || "No Title", post, :target => "_blank" %></h3>
+
+	<span class="pull-left">
 		<%= link_to 'Edit', edit_post_path(post), :class => "btn btn-default" %>
 	</span>
+	<span class="pull-left">
+		&nbsp;<%= link_to 'Link', post.url, :target => "_blank", :class => "btn btn-primary" %>
+	</span>
+	<br/>	<br/>
 	<hr/>
 
 <% end %>
