--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,16 @@
-<h1 class="text-center">
-    Elon<br/>
+<div class="text-center">
+
+
+<h1 class="">
+  <%= image_tag("logo.png", :height => "50") %>
+    Readio<br/>
     <small>
       Re-Read Radio
     </small>
 
 </h1>
+
+</div>
 <hr/>
 
 <div class="col-md-12">
@@ -15,17 +21,14 @@
 
         <h3> &nbsp;<%= link_to post.title, post %>
         <br/>
-        <small>&nbsp; by <%= link_to post.user.profile.display_name, profile_path(post.user.profile) %></small>
+        <small>&nbsp; via <%= link_to post.user.profile.display_name, profile_path(post.user.profile) %></small>
         </h3>
         &nbsp;
 
         <label class="label label-success">
-
-     <i class="glyphicon glyphicon-play"></i> 
-
-     <%= pluralize(post.plays.to_i, 'play') %>
-
-     </label>
+           <i class="glyphicon glyphicon-play"></i> 
+           <%= pluralize(post.plays.to_i, 'play') %>
+       </label>
       &nbsp;
         <% post.tag_list.each do |tag| %>
       <label class="label label-default"> <i class="glyphicon glyphicon-tag"></i> 
