--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -29,7 +29,7 @@
 <br/>
 <hr/>
 
-<% @profile.user.posts.each do |post| %>
+<% @posts.each do |post| %>
 <div class="row">
     <%= link_to image_tag(post.image.url(:thumbnail), :class => "pull-left thumbnail"), post %>
 
@@ -38,6 +38,12 @@
 
         </h2>
              &nbsp;
+
+        <label class="label label-success">
+           <i class="glyphicon glyphicon-play"></i> 
+           <%= pluralize(post.plays.to_i, 'play') %>
+       </label>
+      &nbsp;
         <% post.tag_list.each do |tag| %>
       <label class="label label-default"> <i class="glyphicon glyphicon-tag"></i> 
       <%= link_to tag, tag_path(tag) %></label>
