--- a/app/views/posts/featured.html.erb
+++ b/app/views/posts/featured.html.erb
@@ -1,14 +1,14 @@
 <h1>Featured</h1>
 <hr/>
-<div class="row">
+<div class=" row col-md-12 clearfix">
 
 <% @posts.each do |post| %>
 	<div class="col-md-4">
 	<div class="thumbnail">
-      <%= link_to image_tag(post.image.url()), post_path(post) %>
+      <%= link_to image_tag(post.image.url(:large)), post_path(post) %>
       <div class="caption">
         <h3>
-        <%= post.title %><br/>
+        <%= link_to post.title, post %><br/>
         <small>
         via <%= post.user.profile.display_name %>
         </small>
@@ -19,11 +19,12 @@
   <% end %>
   <br/>
   <br/></div>
-        <p><a href="#" class="btn btn-primary" role="button">Play</a> <a href="#" class="btn btn-default" role="button">view</a></p>
+        <p><a href="<%= post_path(post) %>" class="btn btn-primary" role="button">View</a> 
+        <!-- <a href="#" class="btn btn-default" role="button">view</a></p> -->
       </div>
     </div>
 
-	</div>
+
 <% end %>
 
 </div>
