--- a/app/views/posts/embed.html.erb
+++ b/app/views/posts/embed.html.erb
@@ -1,4 +1,5 @@
-
+<div id="cover" class="jp-play" style="">
+</div>
 
 
 <script type="text/javascript">
@@ -397,6 +398,24 @@
         return player_box;
     });
 })(jQuery);
+
+
+ $('#cover').prepend('<div class="col-md-12"><div class="well pull-left clearfix"><div class="pull-left"><h1><i class="icon-control-play i-2x"></i></h1></div><h1><%= @post.title %> <br/> <small> by <%= @post.user.name %></small></h1></div></div><div class="middle text-center "><button class=" btn btn-circle btn-xl btn-success" ><i class="glyphicon glyphicon-play glyphicon-white"></i></button</div>')
+
+
+
+      $('body').on('click', function(e){
+        e.preventDefault;
+         $('#cover img').remove();
+         $('#embed').fadeIn();
+        $('#cover').fadeOut();
+
+         myPlaylist.play();
+          $.ajax("<%=raw post_play_url(@post) %>"); 
+
+ 
+      });
+
 });
 
 </script>
@@ -412,9 +431,57 @@
 
 
 <style type="text/css">
+
+
+
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+}
+.btn-circle.btn-lg {
+  width: 50px;
+  height: 50px;
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.33;
+  border-radius: 25px;
+}
+.btn-circle.btn-xl {
+  width: 70px;
+  height: 70px;
+  padding: 10px 16px;
+  font-size: 24px;
+  line-height: 1.33;
+  border-radius: 35px;
+}
+
     button.col-sm-1 {
         height: 40px !important;
     }
+
+#cover {
+    position: absolute;
+    content: '';
+    background-image:url("<%= @post.image.url(:embed_cover) %>"); 
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    z-index: 2;
+    background-size:cover;
+}
+
+
+.middle {
+  margin: auto !important;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
 </style>
 
 
