--- a/app/views/posts/featured.html.erb
+++ b/app/views/posts/featured.html.erb
@@ -1,11 +1,11 @@
 <h1>Featured</h1>
 <hr/>
-<div class="row">
+<div class="col-md-12">
 
 <% @posts.each do |post| %>
 	<div class="col-md-4">
 	<div class="thumbnail">
-      <%= link_to image_tag(post.image.url()), post_path(post) %>
+      <%= link_to image_tag(post.image.url(:large)), post_path(post) %>
       <div class="caption">
         <h3>
         <%= post.title %><br/>
@@ -23,7 +23,6 @@
       </div>
     </div>
 
-	</div>
 <% end %>
 
 </div>
