--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -494,9 +494,8 @@
   </div>
   <div class="col-md-4 text-center">
     <br/>
-    <%= image_tag(@post.image.url(:standard)) %>
+    <%= image_tag(@post.image.url(:large), :class => "img-responsive") %>
     <br/>
-<br/>
 
     <!-- sharing -->
 <div class="panel panel-default">
