--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -50,7 +50,7 @@
 <div class="col-md-4">
     <div class="panel panel-primary">
   <div class="panel-heading">
-    <h3 class="panel-title">Featured </h3>
+    <h3 class="panel-title"><%= link_to 'Featured', featured_path %> </h3>
   </div>
   <div class="panel-body">
     <% @posts.where(:featured => true ).each do |post| %>
