--- a/app/assets/stylesheets/readable/variables.less
+++ b/app/assets/stylesheets/readable/variables.less
@@ -14,7 +14,7 @@
 @gray-light:             lighten(@gray-base, 70%);   // #999
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         #4582EC;
+@brand-primary:         #009be3;
 @brand-success:         #3FAD46;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
