--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -55,29 +55,29 @@
   <br/>
 
   <div id="jquery_jplayer_1" class="jp-jplayer"></div>
-<div id="jp_container_1" class="jp-audio well" role="application" aria-label="media player">
+<div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
   <div class="jp-type-single">
     <div class="jp-gui jp-interface">
       <div class="jp-controls">
-        <button class="jp-play btn btn-circle btn-xl btn-success" role="button" tabindex="0"><i class="glyphicon glyphicon-play" ></i></button>
-        <button class="jp-stop btn btn-danger" role="button" tabindex="0"><i class="glyphicon glyphicon-stop" ></i></button>
+        <button class="jp-play" role="button" tabindex="0">play</button>
+        <button class="jp-stop" role="button" tabindex="0">stop</button>
       </div>
       <div class="jp-progress">
         <div class="jp-seek-bar">
           <div class="jp-play-bar"></div>
         </div>
       </div>
-      <div class="jp-volume-controls pull-right">
-        <button class="jp-mute btn" role="button" tabindex="0"><i class="glyphicon glyphicon-volume-off" ></i></button>
-        <button class="jp-volume-max btn" role="button" tabindex="0"><i class="glyphicon glyphicon-volume-up" ></i></button>
+      <div class="jp-volume-controls">
+        <button class="jp-mute" role="button" tabindex="0">mute</button>
+        <button class="jp-volume-max" role="button" tabindex="0">max volume</button>
         <div class="jp-volume-bar">
           <div class="jp-volume-bar-value"></div>
         </div>
       </div>
-      <div class="jp-time-holder ">
+      <div class="jp-time-holder">
         <div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
         <div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
-        <div class="jp-toggles hidden">
+        <div class="jp-toggles">
           <button class="jp-repeat" role="button" tabindex="0">repeat</button>
         </div>
       </div>
@@ -85,10 +85,10 @@
     <div class="jp-details">
       <div class="jp-title" aria-label="title">&nbsp;</div>
     </div>
-    <!-- <div class="jp-no-solution">
+    <div class="jp-no-solution">
       <span>Update Required</span>
       To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
-    </div> -->
+    </div>
   </div>
 </div>
 
