--- a/app/views/layouts/embed.html.erb
+++ b/app/views/layouts/embed.html.erb
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     
     <%= stylesheet_link_tag 'readable', media: 'all' %>
+    <link type="text/css" href="/assets/jplayer.blue.monday.scss" rel="stylesheet" />
     <%= javascript_include_tag 'readable' %>
     <%= csrf_meta_tags %>
   </head>
