--- a/app/views/posts/embed.html.erb
+++ b/app/views/posts/embed.html.erb
@@ -1,81 +1,51 @@
 
+
+
+
+
 <div id="cover" class="play" style="">
 </div>
 
 
 
- <%= image_tag(@post.image.url(:embed),  :class => "pull-left", :style => "margin-right:10px;") %>
 
-
-<script type="text/javascript">
-  $(document).ready(function(){
-    
-
-
- $('#cover').prepend('<div class="col-md-12"><div class="well pull-left clearfix"><div class="pull-left"><h1><i class="icon-control-play i-2x"></i></h1></div><h1><%= @post.title %> <br/> <small> by <%= @post.user.name %></small></h1></div></div><div class="middle text-center "><button class=" btn btn-circle btn-xl btn-success" ><i class="glyphicon glyphicon-play glyphicon-white"></i></button</div>')
-
-
-
-      $('body').on('click', function(e){
-        e.preventDefault;
-         $('#cover img').remove();
-         $('#embed').fadeIn();
-        $('#cover').fadeOut();
-
-         myPlaylist.play();
-          $.ajax("<%=raw post_play_url(@post) %>"); 
-
- 
-      });
-
-});
-
-</script>
-
- <%= image_tag(@post.image.url(:embed),  :class => "pull-right ") %>
-
- 
-
-<div id="jquery_jplayer_1" class="jp-jplayer"></div>
-<div id="jp_container_1" class="jp-audio well" role="application" aria-label="media player">
-    <h4><%= @post.title %></h4>
+  <div id="jquery_jplayer_1" class="jp-jplayer"></div>
+<div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
   <div class="jp-type-single">
     <div class="jp-gui jp-interface">
       <div class="jp-controls">
-        <button class="jp-play btn btn-circle btn-lg btn-success " role="button" tabindex="0"><i class="glyphicon glyphicon-play"></i></button>
-        <button class="jp-stop btn btn-danger" role="button" tabindex="0"><i class="glyphicon glyphicon-stop"></i>
-        </button>
+        <button class="jp-play" role="button" tabindex="0">play</button>
+        <button class="jp-stop" role="button" tabindex="0">stop</button>
       </div>
       <div class="jp-progress">
         <div class="jp-seek-bar">
           <div class="jp-play-bar"></div>
         </div>
       </div>
-      <div class="jp-volume-controls pull-right">
-        <button class="jp-mute btn" role="button" tabindex="0"><i class="glyphicon glyphicon-volume-off"></i></button>
-        <button class="jp-volume-max btn" role="button" tabindex="0"><i class="glyphicon glyphicon-volume-up"></i></button>
+      <div class="jp-volume-controls">
+        <button class="jp-mute" role="button" tabindex="0">mute</button>
+        <button class="jp-volume-max" role="button" tabindex="0">max volume</button>
         <div class="jp-volume-bar">
           <div class="jp-volume-bar-value"></div>
         </div>
       </div>
-      <div class="jp-time-holder ">
+      <div class="jp-time-holder">
         <div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
         <div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
-        <div class="jp-toggles hidden">
-          <button class="jp-repeat btn" role="button" tabindex="0"><i class="glyphicon glyphicon-repeat"></i></button>
+        <div class="jp-toggles">
+          <button class="jp-repeat" role="button" tabindex="0">repeat</button>
         </div>
       </div>
     </div>
     <div class="jp-details">
       <div class="jp-title" aria-label="title">&nbsp;</div>
     </div>
-    <!-- <div class="jp-no-solution">
+    <div class="jp-no-solution">
       <span>Update Required</span>
       To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
-    </div> -->
+    </div>
   </div>
 </div>
-
 
 <style type="text/css">
 
@@ -113,7 +83,6 @@
         height: 40px !important;
     }
 
-<<<<<<< HEAD
 #cover {
     position: absolute;
     content: '';
@@ -134,27 +103,21 @@
 }
 
 
-
-
-
 </style>
-
-
-
 
 <script type="text/javascript">
     
 $(document).ready(function(){
 
 
-  $('#cover').prepend('<div class="col-md-12"><div class="well pull-left clearfix"><div class=""><button class="jp-play btn btn-circle  btn-xl btn-success"><i class="glyphicon glyphicon-play" ></i></button></div><div class="pull-left"><h1><i class="icon-control-play i-2x"></i></h1></div><h1><%= @post.title %> <br/> <small> by <%= @post.user.name %></small></h1></div></div>')
+  $('#cover').prepend('<div class="col-md-12"><div class="well pull-left clearfix"><div class=""></div><div class="pull-left"><h1><i class="icon-control-play i-2x"></i></h1></div><h1><%= @post.title %> <br/> <small> by <%= @post.user.name %></small></h1></div></div>')
 
 
 
         $("#jquery_jplayer_1").jPlayer({
         ready: function () {
           $(this).jPlayer("setMedia", {
-            title: "Bubble",
+            title: "<%=raw @post.title %>",
             m4a: 'http://res.cloudinary.com/dnffmpcmo/video/upload/<%=raw @post.audio.file.identifier %>',
             oga: "http://www.jplayer.org/audio/ogg/Miaow-07-Bubble.ogg"
           });
@@ -196,6 +159,8 @@ $(document).ready(function(){
 
 
 </script>
+
+
 
 
 
