--- a/app/views/posts/embed.html.erb
+++ b/app/views/posts/embed.html.erb
@@ -10,12 +10,12 @@
 
 
   <div id="jquery_jplayer_1" class="jp-jplayer"></div>
-<div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
+<div id="jp_container_1" class="jp-audio well" role="application" aria-label="media player">
   <div class="jp-type-single">
     <div class="jp-gui jp-interface">
       <div class="jp-controls">
-        <button class="jp-play" role="button" tabindex="0">play</button>
-        <button class="jp-stop" role="button" tabindex="0">stop</button>
+        <button class="jp-play btn btn-circle btn-xl btn-success" role="button" tabindex="0"><i class="glyphicon-play glyphicon"></i></button>
+        <button class="jp-stop btn btn-md btn-danger" role="button" tabindex="0"><i class="glyphicon-stop glyphicon"></i></button>
       </div>
       <div class="jp-progress">
         <div class="jp-seek-bar">
@@ -23,8 +23,8 @@
         </div>
       </div>
       <div class="jp-volume-controls">
-        <button class="jp-mute" role="button" tabindex="0">mute</button>
-        <button class="jp-volume-max" role="button" tabindex="0">max volume</button>
+        <button class="jp-mute btn" role="button" tabindex="0"><i class="glyphicon-volume-off glyphicon"></i></button>
+        <button class="jp-volume-max btn" role="button" tabindex="0"><i class="glyphicon-volume-up glyphicon"></i></button>
         <div class="jp-volume-bar">
           <div class="jp-volume-bar-value"></div>
         </div>
@@ -33,17 +33,17 @@
         <div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
         <div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
         <div class="jp-toggles">
-          <button class="jp-repeat" role="button" tabindex="0">repeat</button>
+          <button class="jp-repeat hidden" role="button" tabindex="0">repeat</button>
         </div>
       </div>
     </div>
     <div class="jp-details">
       <div class="jp-title" aria-label="title">&nbsp;</div>
     </div>
-    <div class="jp-no-solution">
+    <!-- <div class="jp-no-solution">
       <span>Update Required</span>
       To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
-    </div>
+    </div> -->
   </div>
 </div>
 
