--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -69,7 +69,7 @@
           <div class="jp-play-bar"></div>
         </div>
       </div>
-      <div class="jp-volume-controls">
+      <div class="jp-volume-controls pull-right">
         <button class="jp-mute btn" role="button" tabindex="0"><i class="glyphicon-volume-off glyphicon"></i></button>
         <button class="jp-volume-max btn" role="button" tabindex="0"><i class="glyphicon-volume-up glyphicon"></i></button>
         <div class="jp-volume-bar">
