--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -164,6 +164,7 @@
 
 </div>
 
+<% unless @post.audio.blank? %>
 
 <script type="text/javascript">
     
@@ -207,4 +208,5 @@ $(document).ready(function(){
 
 </script>
 
+<% end %>
 
