--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,15 @@
-
+<% content_for :head do %>
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@elon">
+<meta name="twitter:title" content="<%= @post.title %>">
+<meta name="twitter:description" content="<%= @post.copy %>">
+<meta name="twitter:creator" content="@<%= @post.user.profile.twitter_handle %>">
+<meta name="twitter:image:src" content="<%= @post.image.url(:thumb) %>">
+<meta name="twitter:domain" content="embedtree.com">
+<meta property="og:title" content="<%= @post.title %>" />
+<meta property="og:url" content="http://embedtree.com/leafs/<%= @post.id %>" />
+<meta property="og:image" content="<%= @post.image.url(:thimb) %>" />
+<% end %>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
