--- a/app/views/layouts/readable.html.erb
+++ b/app/views/layouts/readable.html.erb
@@ -12,6 +12,7 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
 
+     <%= content_for?(:head) ? yield(:head) : "" %>
   
     <%= stylesheet_link_tag "readable", :media => "all" %>
     <%= yield(:page_stylesheet) if content_for?(:page_stylesheet) %>
