--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -6,7 +6,7 @@
 <br/>
 <p>
 
-  <%= image_tag( @profile.image.url(:standard)) %>
+  <%= image_tag( @profile.image.url(:standard), :class => "img-responsive") %>
 </p>
 
 <p>
@@ -19,10 +19,11 @@
 <h1>
   <%= @profile.display_name %>
 </h1>
-
+<% unless @profile.bio.blank? %>
 <p class="well">
   <%= @profile.bio %>
 </p>
+<% end %>
 
 <% if user_signed_in? %>
   <% if current_user.try(:admin?) || current_user == @profile.user %>
