--- a/app/views/shared/_posts.html.erb
+++ b/app/views/shared/_posts.html.erb
@@ -12,9 +12,11 @@
            <%= pluralize(post.plays.to_i, 'play') %>
         </label>
         &nbsp;
-        <% post.tags.limit(5).each do |tag| %>
+        <% post.tag_list.each_with_index do |tag, index| %>
+          <% unless index <= 5 %> 
             <label class="label label-default"> <i class="glyphicon glyphicon-tag"></i> 
             <%= link_to tag, tag_path(tag) %></label>
+            <% end %>
         <% end %>   
       </div>
 
