--- a/app/views/posts/featured.html.erb
+++ b/app/views/posts/featured.html.erb
@@ -6,12 +6,12 @@
 <% @posts.each do |post| %>
 	<div class="col-md-4 clearfix">
 	<div class="thumbnail">
-      <%= link_to image_tag(post.image.url(:large)), post_path(post) %>
+      <%= link_to image_tag(post.image.url(:large)), user_post_path(:user_id => post.user.profile.slug, :id => post.slug) %>
       <div class="caption">
         <h3>
-        <%= link_to truncate(post.title, :length => 20 ), post %><br/>
+        <%= link_to truncate(post.title, :length => 20 ), user_post_path(:user_id => post.user.profile.slug, :id => post.slug) %><br/>
         <small>
-        via <%= post.user.profile.display_name %>
+        via <%= link_to post.user.profile.display_name, vanity_profile_path(:id => post.user.profile.slug) %>
         </small>
         </h3>
         <% post.tag_list.each do |tag| %>
