--- a/app/views/shared/_posts.html.erb
+++ b/app/views/shared/_posts.html.erb
@@ -1,7 +1,7 @@
  <% @posts.each do |post| %>
       <div class="row  clearfix">
-        <%= link_to image_tag(post.image.url(:thumbnail) || "http://res.cloudinary.com/dnffmpcmo/image/upload/v1439982461/logo-100.png", :class => "pull-left thumbnail img-responsive" , :style=> "margin-right:10px;"), post %>
-        <h4> <%= link_to post.title, post %>
+        <%= link_to image_tag(post.image.url(:thumbnail) || "http://res.cloudinary.com/dnffmpcmo/image/upload/v1439982461/logo-100.png", :class => "pull-left thumbnail img-responsive" , :style=> "margin-right:10px;"), user_post_path(:user_id => post.user.profile.slug, :id => post.slug) %>
+        <h4> <%= link_to post.title, user_post_path(:user_id => post.user.profile.slug, :id => post.slug) %>
         <br/>
         <small>&nbsp; via <%= link_to post.user.profile.display_name || post.user.name, profile_path(post.user.profile) %></small>
         </h4>
@@ -13,7 +13,7 @@
         </label>
         &nbsp;
         <% post.tag_list.each_with_index do |tag, index| %>
-          <% unless index <= 5 %> 
+          <% unless index > 5 %> 
             <label class="label label-default"> <i class="glyphicon glyphicon-tag"></i> 
             <%= link_to tag, tag_path(tag) %></label>
             <% end %>
