--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
   <%= image_tag("logo.png", :height => "50") %>
     Readio<br/>
     <small>
-      Read Me Radio
+      Narrated news, blogs and articles
     </small>
 
 </h1>
