--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
 <meta name="twitter:creator" content="@<%= @post.user.profile.display_name %>">
 <meta name="twitter:image:src" content="<%= @post.image.url(:thumb) %>">
 <meta name="twitter:domain" content="elon.xyz">
-<meta name="twitter:player" content="https://elon.herokuapp.com<%= player_path(@post.id) %>">
+<meta name="twitter:player" content="https://elon.herokuapp.com<%= player_path(:user_id => @post.user.profile.slug, :id => @post.slug) %>">
 
 <meta property="og:title" content="<%= @post.title %>" />
 <meta property="og:url" content="http://elon.herokuapp.com/posts/<%= @post.id %>" />
@@ -23,9 +23,9 @@
       </div>
       <div class="modal-body">
 
-        <iframe src="<%= embed_url(@post) %>" frameborder="none" width="500" height="300"></iframe>
+        <iframe src="<%= embed_url(:user_id => @post.user.name, id: @post) %>" frameborder="none" width="500" height="300"></iframe>
         <br>
-        <textarea cols="60"  id='fe_text' rows="3"><iframe src="<%= embed_url(@post) %>" frameborder="none" width="500" height="300"></iframe><br/><a href="<%= user_post_url(:user_id => @post.user.profile.slug, :id => @post.slug) %>" target="_blank"><%= @post.title %></a> via <a href="<%= vanity_profile_url(:id => @post.user.profile.slug) %>" target="_blank"><%= @post.user.profile.display_name || @post.user.name %> </a> on <a href="<%= root_url %>" target="_blank">Readio</a></textarea>
+        <textarea cols="60"  id='fe_text' rows="3"><iframe src="<%= embed_url(:user_id => @post.user.name, id: @post) %>) %>" frameborder="none" width="500" height="300"></iframe><br/><a href="<%= user_post_url(:user_id => @post.user.profile.slug, :id => @post.slug) %>" target="_blank"><%= @post.title %></a> via <a href="<%= vanity_profile_url(:id => @post.user.profile.slug) %>" target="_blank"><%= @post.user.profile.display_name || @post.user.name %> </a> on <a href="<%= root_url %>" target="_blank">Readio</a></textarea>
 
 <script>
   $(document).ready(function() {
